[project]
    name = "mixtures-of-depth-of-mixtures"
    version = "0.0.0"
    description = "mixtures of depths of mixtures"
    authors = [{ name = "graham", email = "None" }]
    dependencies = []
    requires-python = ">=3.12"
    readme = "README.md"
    license = { text = "Nah" }

[build-system]
    requires = ["pdm-backend"]
    build-backend = "pdm.backend"


[tool.pdm]
    distribution = true

[tool.ruff]
    line-length = 120
